# thvo-kicad-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_lib.sh  lib_symbol.kicad_sym
lib-table/: design-block-lib-table  fp-lib-table  sym-lib-table
lib_footprint.pretty/: MODULE_TMC2209_SILENTSTEPSTICK.kicad_mod
lib_symbol.kicad_symdir/: 1P8T.kicad_sym
symbols/: TMC2209_SILENTSTEPSTICK.kicad_sym
tools/: kicad_lib_pack.py
